--- a/src/frontend-crud/crud.ui.portal.jenn/Views/TipoProcedimento/Edit.cshtml
+++ b/src/frontend-crud/crud.ui.portal.jenn/Views/TipoProcedimento/Edit.cshtml
@@ -26,6 +26,16 @@
                         </div>
                     </div>
                     <div class="form-group">
+                        <label class="col-md-2 control-label" for="Categoria"> Categoria <h11>*</h11></label>
+                        <div class="col-md-8">
+
+                            <select class="form-control input-md" asp-for="Categoria"
+                                    asp-items="@ViewBag.CategoriaProcedimento"></select>
+
+                            <span asp-validation-for="Categoria" class="text-danger"></span>
+                        </div>
+                    </div>
+                    <div class="form-group">
                         <label class="col-md-2 control-label" for="Cadastrar"></label>
                         <div class="col-md-8">
                             <button id="Cadastrar" name="Cadastrar" class="btn btn-success" type="Submit">Cadastrar</button>
