--- a/src/frontend-crud/crud.ui.portal.jenn/Views/Empresa/Create.cshtml
+++ b/src/frontend-crud/crud.ui.portal.jenn/Views/Empresa/Create.cshtml
@@ -1,112 +1,229 @@
 ﻿@model api.portal.jenn.DTO.Empresa
 
-@{
-    ViewData["Title"] = "Create";
-    Layout = "~/Views/Shared/_Layout.cshtml";
-}
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.10/jquery.mask.js"></script>
 
-<h1>Create</h1>
 
-<h4>Empresa</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="CodigoCnes" class="control-label"></label>
-                <input asp-for="CodigoCnes" class="form-control" />
-                <span asp-validation-for="CodigoCnes" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="MatrizID" class="control-label"></label>
-                <select asp-for="MatrizID" class ="form-control" asp-items="ViewBag.MatrizID"></select>
-            </div>
-            <div class="form-group">
-                <label asp-for="cnpj" class="control-label"></label>
-                <input asp-for="cnpj" class="form-control" />
-                <span asp-validation-for="cnpj" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Nome" class="control-label"></label>
-                <input asp-for="Nome" class="form-control" />
-                <span asp-validation-for="Nome" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Telefone1" class="control-label"></label>
-                <input asp-for="Telefone1" class="form-control" />
-                <span asp-validation-for="Telefone1" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Telefone2" class="control-label"></label>
-                <input asp-for="Telefone2" class="form-control" />
-                <span asp-validation-for="Telefone2" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ImgemFrontEmpresa" class="control-label"></label>
-                <input asp-for="ImgemFrontEmpresa" class="form-control" />
-                <span asp-validation-for="ImgemFrontEmpresa" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Email" class="control-label"></label>
-                <input asp-for="Email" class="form-control" />
-                <span asp-validation-for="Email" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Logradouro" class="control-label"></label>
-                <input asp-for="Logradouro" class="form-control" />
-                <span asp-validation-for="Logradouro" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="numero" class="control-label"></label>
-                <input asp-for="numero" class="form-control" />
-                <span asp-validation-for="numero" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="bairro" class="control-label"></label>
-                <input asp-for="bairro" class="form-control" />
-                <span asp-validation-for="bairro" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="cep" class="control-label"></label>
-                <input asp-for="cep" class="form-control" />
-                <span asp-validation-for="cep" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="maps" class="control-label"></label>
-                <input asp-for="maps" class="form-control" />
-                <span asp-validation-for="maps" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Responsavel" class="control-label"></label>
-                <input asp-for="Responsavel" class="form-control" />
-                <span asp-validation-for="Responsavel" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Id_classe" class="control-label"></label>
-                <input asp-for="Id_classe" class="form-control" />
-                <span asp-validation-for="Id_classe" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Cert_Empresa" class="control-label"></label>
-                <input asp-for="Cert_Empresa" class="form-control" />
-                <span asp-validation-for="Cert_Empresa" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Ativo" class="control-label"></label>
-                <input asp-for="Ativo" class="form-control" />
-                <span asp-validation-for="Ativo" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
-    </div>
-</div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+<form asp-controller="Empresa" asp-action="Create" asp-antiforgery="true" method="post" class="form-horizontal">
+    <fieldset>
+        <div class="panel panel-primary">
+            <div class="panel-heading">Cadastro de uma Nova Empresa/Filial</div>
+
+            <div class="panel-body">
+                <div class="form-group">
+                    <div class="col-md-11 control-label">
+                        <p class="help-block"><h11>*</h11> Campo Obrigatório </p>
+                    </div>
+                </div>
+                <!-- Multiple Radios (inline) -->
+
+                <div class="form-group">
+                    <label class="col-md-2 control-label" for="encaminhamento">Tipo Empresa<h11>*</h11></label>
+                    <div class="col-md-4">
+                        <div class="input-group">
+                            <span class="input-group-addon">
+                                <label class="radio-inline" for="radios-0">
+                                    <input checked type="radio" name="enc" id="enc" value="sim" onclick="desabilita('sel_matriz')" required>
+                                    Matriz
+                                </label>
+                                <label class="radio-inline" for="radios-1">
+                                    <input type="radio" name="enc" id="enc" value="nao" onclick="habilita('sel_matriz')">
+                                    Filial
+                                </label>
+                            </span>
+                            <select disabled id="sel_matriz" asp-for="MatrizID"  asp-items="ViewBag.MatrizID" style="width:450px;" class="form-control"></select>
+                        </div>
+                    </div>
+                </div>
+
+
+
+
+                <!-- Text input-->
+                <div class="form-group">
+                    <label class="col-md-2 control-label" for="Nome">Nome <h11>*</h11></label>
+                    <div class="col-md-8">
+                        <input id="Nome" asp-for="Nome" name="Nome" placeholder="" class="form-control input-md" required="" type="text">
+                        <span asp-validation-for="Nome" class="text-danger"></span>
+                    </div>
+                </div>
+
+                <!-- Text input-->
+                <div class="form-group">
+                    <label class="col-md-2 control-label" for="Nome">CNPJ <h11>*</h11></label>
+                    <div class="col-md-3">
+                        <input asp-for="cnpj" id="cnpj" name="cnpj" placeholder="Apenas números" class="form-control input-md" required="" type="text" maxlength="20" pattern="[0-9]+$">
+                        <span asp-validation-for="cnpj" class="text-danger"></span>
+                    </div>
+
+                    <label class="col-md-2 control-label" for="Nome">Código Cnes <h11>*</h11></label>
+                    <div class="col-md-3">
+                        <input asp-for="CodigoCnes" id="CodigoCnes" name="CodigoCnes" placeholder="Apenas números" class="form-control input-md" required="" type="text" maxlength="20" pattern="[0-9]+$">
+                        <span asp-validation-for="CodigoCnes" class="text-danger"></span>
+                    </div>
+                </div>
+                <!-- Select Basic -->
+                <div class="form-group">
+                   
+                    <label class="col-md-2 control-label" for="Estado Civil">Conta Empresa<h11>*</h11></label>
+                    <div class="col-md-2">
+                        <select asp-for="TipoEmpresa" required id="Tipo Cliente" name="TipoEmpresa" class="form-control">
+                            <option value="">Selecione</option>
+                            <option value="0">Gratuita</option>
+                            <option value="1">Basico</option>
+                            <option value="2">Vip</option>
+                        </select>
+                    </div>
+
+                </div>
+
+
+
+                <!-- Prepended text-->
+                <div class="form-group">
+                    <label class="col-md-2 control-label" for="prependedtext">Telefone <h11>*</h11></label>
+                    <div class="col-md-3">
+                        <div class="input-group">
+                            <span class="input-group-addon"><i class="glyphicon glyphicon-earphone"></i></span>
+                            <input id="prependedtext"  asp-for="Telefone1" name="Telefone1" class="form-control" placeholder="XX XXXXX-XXXX" required="" type="text" maxlength="13" pattern="\[0-9]{2}\ [0-9]{4,6}-[0-9]{3,4}$"
+                                   OnKeyPress="formatar('## #####-####', this)">
+                        </div>
+                    </div>
+
+                    <label class="col-md-1 control-label" for="prependedtext">Telefone</label>
+                    <div class="col-md-3">
+                        <div class="input-group">
+                            <span class="input-group-addon"><i class="glyphicon glyphicon-earphone"></i></span>
+                            <input id="prependedtext" asp-for="Telefone2" name="Telefone2" class="form-control" placeholder="XX XXXXX-XXXX" type="text" maxlength="13" pattern="\[0-9]{2}\ [0-9]{4,6}-[0-9]{3,4}$"
+                                   OnKeyPress="formatar('## #####-####', this)">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label class="col-md-2 control-label" for="prependedtext">Email <h11>*</h11></label>
+                    <div class="col-md-3">
+                        <div class="input-group">
+                            <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
+                            <input id="email" asp-for="Email" name="Email" class="form-control" placeholder="email@email.com" required="" type="email" />
+                        </div>
+                    </div>
+
+                    <label class="col-md-2 control-label" for="prependedtext">Link loja <h11>*</h11></label>
+                    <div class="col-md-3">
+                        <div class="input-group">
+                            <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
+                            <input id="prependedtext" asp-for="url_loja" name="url_loja" class="form-control" placeholder="Link da loja virtual"  type="url" />
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="form-group">
+                    <label class="col-md-2 control-label" for="prependedtext">Logotipo </label>
+                    <div class="col-md-3">
+                        <div class="input-group">
+                            <span class="input-group-addon"><i class="glyphicon  glyphicon-envelope"></i></span>
+                            <input  id="prependedtext" asp-for="ImgemFrontEmpresa" name="ImgemFrontEmpresa" class="form-control" placeholder="Link do Logotipo" type="url" />
+                        </div>
+                    </div>
+                    <label class="col-md-2 control-label" for="prependedtext">Google Maps  </label>
+                    <div class="col-md-3">
+                        <div class="input-group">
+                            <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
+                            <input id="prependedtext" asp-for="maps" name="maps" class="form-control" placeholder="Link Endereço Google Maps Empresa"  type="url" />
+                        </div>
+                    </div>
+                </div>
+
+
+
+                <div class="form-group">
+                    <label class="col-md-2 control-label" for="prependedtext">Responsavel <h11>*</h11></label>
+                    <div class="col-md-4">
+                        <div class="input-group">
+                            <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
+                            <input id="prependedtext" asp-for="Responsavel" name="Responsavel" class="form-control" placeholder="Responsavel pela empresa" required="" type="text" />
+                        </div>
+                    </div>
+                </div>
+
+
+
+
+
+                <!-- Search input-->
+                <div class="form-group">
+                    <label class="col-md-2 control-label" for="CEP">CEP <h11>*</h11></label>
+                    <div class="col-md-2">
+                        <input id="cep" name="cep" asp-for="cep" placeholder="Apenas números" class="form-control input-md"   type="text" maxlength="8" pattern="[0-9]+$">
+                    </div>
+                    <div class="col-md-2">
+                        <button type="button" class="btn btn-primary" id="pesquisa">Pesquisar</button>
+                    </div>
+                </div>
+
+
+
+                
+                <div class="form-group">
+                    <label class="col-md-2 control-label" for="prependedtext">Endereço</label>
+                    <div class="col-md-4">
+                        <div class="input-group">
+                            <span class="input-group-addon">Rua</span>
+                            <input id="rua" name="Logradouro" asp-for="Logradouro" class="form-control" placeholder="" required="" type="text">
+                        </div>
+
+                    </div>
+                    <div class="col-md-2">
+                        <div class="input-group">
+                            <span class="input-group-addon">Nº <h11>*</h11></span>
+                            <input id="numero" name="numero" asp-for="numero" class="form-control" placeholder="" required="" type="text">
+                        </div>
+
+                    </div>
+
+                    <div class="col-md-3">
+                        <div class="input-group">
+                            <span class="input-group-addon">Bairro</span>
+                            <input id="bairro" asp-for="bairro" name="bairro" class="form-control" placeholder="" required="" type="text">
+                        </div>
+
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label class="col-md-2 control-label" for="prependedtext"></label>
+                    <div class="col-md-6">
+                        <div class="input-group">
+                            <span class="input-group-addon">UF / Cidade</span>
+                            <select   id="sel_cidade" asp-for="num_cidade" asp-items="ViewBag.Cidades" required class="form-control"></select>
+                        </div>
+
+                    </div>
+
+                    
+                </div>
+
+
+            </div>
+            <div class="form-group">
+                <label class="col-md-2 control-label" for="Cadastrar"></label>
+                <div class="col-md-8">
+                    <button id="Cadastrar" name="Cadastrar" class="btn btn-success" type="Submit">Cadastrar</button>
+                    <button id="Cancelar" name="Cancelar" class="btn btn-danger" type="Reset">Cancelar</button>
+                    <a class="btn btn-info" asp-action="Index">Voltar Para a Lista</a>
+                </div>
+            </div>
+
+        </div>
+    </fieldset>
+</form>
+
+<script src="~/js/empresa.js"></script>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
