--- a/src/frontend-crud/crud.ui.portal.jenn/Views/Procedimento/Create.cshtml
+++ b/src/frontend-crud/crud.ui.portal.jenn/Views/Procedimento/Create.cshtml
@@ -18,7 +18,7 @@
                         </div>
                     </div>
 
-                
+
                     <div class="form-group">
                         <label class="col-md-2 control-label" for="Nome">Nome <h11>*</h11></label>
                         <div class="col-md-8">
@@ -37,23 +37,33 @@
 
 
                     <div class="form-group">
-                        <label class="col-md-2 control-label" for="ImgProduto">Imagem <h11>*</h11></label>
+                        <label class="col-md-2 control-label" for="Imagem">Imagem procedimento <h11>*</h11></label>
                         <div class="col-md-8">
-                            <input asp-for="ImgProduto" class="form-control" />
-                            <span asp-validation-for="ImgProduto" class="text-danger"></span>
+                            <input asp-for="ImgProduto_Proc" class="form-control" type="text" multiple />
+                            <span asp-validation-for="ImgProduto_Proc" class="text-danger"></span>
                         </div>
                     </div>
 
+                    <div class="form-group">
+                        <label class="col-md-2 control-label" for="Categoria"> Categoria <h11>*</h11></label>
+                        <div class="col-md-8">
 
-                        <div class="form-group">
-                            <label class="col-md-2 control-label" for="Cadastrar"></label>
-                            <div class="col-md-8">
-                                <button id="Cadastrar" name="Cadastrar" class="btn btn-success" type="Submit">Cadastrar</button>
-                                <button id="Cancelar" name="Cancelar" class="btn btn-danger" asp-action="Index" type="Reset">Cancelar</button>
-                                <a  class="btn btn-info" asp-action="Index">Voltar Para a Lista de Procedimentos</a>
-                            </div>
+                            <select class="form-control input-md" asp-for="TipoProcedimento"
+                                    asp-items="@ViewBag.TipoProcedimento"></select>
+
+                            <span asp-validation-for="TipoProcedimento" class="text-danger"></span>
                         </div>
                     </div>
+
+                    <div class="form-group">
+                        <label class="col-md-2 control-label" for="Cadastrar"></label>
+                        <div class="col-md-8">
+                            <button id="Cadastrar" name="Cadastrar" class="btn btn-success" type="Submit">Cadastrar</button>
+                            <button id="Cancelar" name="Cancelar" class="btn btn-danger" asp-action="Index" type="Reset">Cancelar</button>
+                            <a class="btn btn-info" asp-action="Index">Voltar Para a Lista de Procedimentos</a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </fieldset>
     </form>
