--- a/src/frontend-crud/crud.ui.portal.jenn/Views/Procedimento/Details.cshtml
+++ b/src/frontend-crud/crud.ui.portal.jenn/Views/Procedimento/Details.cshtml
@@ -24,10 +24,10 @@
             @Html.DisplayFor(model => model.Descricao)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ImgProduto)
+            @Html.DisplayNameFor(model => model.ImgProduto_Proc)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ImgProduto)
+            @Html.DisplayFor(model => model.ImgProduto_Proc)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Ativo)
