--- a/src/frontend-crud/crud.ui.portal.jenn/Views/Procedimento/Edit.cshtml
+++ b/src/frontend-crud/crud.ui.portal.jenn/Views/Procedimento/Edit.cshtml
@@ -9,7 +9,7 @@
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <fieldset>
             <div class="panel panel-primary">
-                <div class="panel-heading">Cadastro de um Novo Procedimento</div>
+                <div class="panel-heading">Alteraração Procedimento</div>
 
                 <div class="panel-body">
                     <div class="form-group">
@@ -37,14 +37,24 @@
 
 
                     <div class="form-group">
-                        <label class="col-md-2 control-label" for="ImgProduto">Imagem <h11>*</h11></label>
+                        <label class="col-md-2 control-label" for="ImgProduto_Proc">Imagem <h11>*</h11></label>
                         <div class="col-md-8">
-                            <input asp-for="ImgProduto" class="form-control" />
-                            <span asp-validation-for="ImgProduto" class="text-danger"></span>
+                            <input asp-for="ImgProduto_Proc" class="form-control" />
+                            <span asp-validation-for="ImgProduto_Proc" class="text-danger"></span>
                         </div>
                     </div>
 
-                    
+                    <div class="form-group">
+                        <label class="col-md-2 control-label" for="Tipo"> Tipo <h11>*</h11></label>
+                        <div class="col-md-8">
+
+                            <select class="form-control input-md" asp-for="TipoProcedimento"
+                                    asp-items="@ViewBag.TipoProcedimento"></select>
+
+                            <span asp-validation-for="TipoProcedimento" class="text-danger"></span>
+                        </div>
+                    </div>
+
                     <div class="form-group">
                         <label class="col-md-2 control-label" for="Ativo">Status <h11>*</h11></label>
                         <div class="col-md-4">
@@ -62,14 +72,14 @@
                             </div>
                         </div>
                     </div>
-                        <div class="form-group">
-                            <label class="col-md-2 control-label" for="Cadastrar"></label>
-                            <div class="col-md-8">
-                                <button id="Cadastrar" name="Salvar" class="btn btn-success" type="Submit">Salvar</button>
-                                <a class="btn btn-info" asp-action="Index">Voltar Para a Lista de Procedimentos</a>
-                            </div>
+                    <div class="form-group">
+                        <label class="col-md-2 control-label" for="Cadastrar"></label>
+                        <div class="col-md-8">
+                            <button id="Cadastrar" name="Salvar" class="btn btn-success" type="Submit">Salvar</button>
+                            <a class="btn btn-info" asp-action="Index">Voltar Para a Lista de Procedimentos</a>
                         </div>
                     </div>
+                </div>
                 </div>
         </fieldset>
     </form>
