--- a/src/frontend-crud/crud.ui.portal.jenn/Views/Procedimento/Index.cshtml
+++ b/src/frontend-crud/crud.ui.portal.jenn/Views/Procedimento/Index.cshtml
@@ -17,8 +17,9 @@
                 <th>
                     Descrição
                 </th>
+                
                 <th>
-                    Link Imagem
+                    Tipo Procedimento
                 </th>
                 <th>
                     Status
@@ -29,35 +30,35 @@
         <tbody>
             @foreach (var item in Model)
             {
-                <tr>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Nome)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Descricao)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.ImgProduto)
-                    </td>
-                    <td>
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Nome)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Descricao)
+                </td>
+                
+                <td>
+                    @Html.DisplayFor(modelItem => item.TipoProcedimento.Nome)
+                </td>
+                <td>
 
-                        @if (item.Ativo > 0)
-                        {
-                            <label class="bg-success">Ativo</label>
-                        }
-                        else
-                        {
-                            <label class="bg-danger">Desativado</label>
-                        }
-                    </td>
-                    <td>
-                        <div class="col-md-8">
-                            <a class="btn btn-secondary" asp-action="Edit" asp-route-id="@item.ProcedimentoID">Editar</a> |
-                            <a class="btn btn-secondary" asp-action="Details" asp-route-id="@item.ProcedimentoID">Detalhar</a> |
-                            <a class="btn btn-secondary" asp-action="Delete" asp-route-id="@item.ProcedimentoID">Deletar</a>
-                        </div>
-                    </td>
-                </tr>
+                    @if (item.Ativo > 0)
+                    {
+                        <label class="bg-success">Ativo</label>
+                    }
+                    else
+                    {
+                        <label class="bg-danger">Desativado</label>
+                    }
+                </td>
+                <td>
+                    <div class="col-md-8">
+                        <a class="btn btn-secondary" asp-action="Edit" asp-route-id="@item.ProcedimentoID">Editar</a> |
+                         <a class="btn btn-secondary" asp-action="Delete" asp-route-id="@item.ProcedimentoID">Deletar</a>
+                    </div>
+                </td>
+            </tr>
             }
         </tbody>
     </table>
