--- a/src/frontend-crud/crud.ui.portal.jenn/Views/Convenio/Index.cshtml
+++ b/src/frontend-crud/crud.ui.portal.jenn/Views/Convenio/Index.cshtml
@@ -10,7 +10,7 @@
 
 <div class="form-group">
     <a asp-action="Create">Novo Convenio</a>
-    <table class=" table-active col-md-12 ">
+    <table class=" table  col-md-12 ">
         <thead>
             <tr>
                 <th>
