--- a/src/frontend-crud/crud.ui.portal.jenn/Views/CategoriaProcedimento/Index.cshtml
+++ b/src/frontend-crud/crud.ui.portal.jenn/Views/CategoriaProcedimento/Index.cshtml
@@ -9,7 +9,7 @@
 
 <div class="form-group">
     <a asp-action="Create">Nova Categoria</a>
-    <table class=" table-active col-md-12 ">
+    <table class=" table  col-md-12 ">
         <thead>
             <tr>
                 <th>
