--- a/src/frontend-crud/crud.ui.portal.jenn/Views/ProcedimentoEmpresa/Edit.cshtml
+++ b/src/frontend-crud/crud.ui.portal.jenn/Views/ProcedimentoEmpresa/Edit.cshtml
@@ -128,7 +128,7 @@
         <div class="form-group">
             <label class="col-md-2 control-label" for="Cadastrar"></label>
             <div class="col-md-8">
-                <button id="Cadastrar" name="Cadastrar" class="btn btn-success" type="Submit">Cadastrar</button>
+                <button id="Cadastrar" name="Cadastrar" class="btn btn-success" type="Submit">Salvar</button>
                 <button id="Cancelar" name="Cancelar" class="btn btn-danger" type="Reset">Cancelar</button>
                 <a class="btn btn-info" asp-action="Index">Voltar Para a Lista</a>
             </div>
